--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yneskladovae.github.io/Todolist-lesson",
+  "homepage": "https://yneskladovae.github.io/Todolist-Redux-Toolkit",
   "dependencies": {
     "@babel/runtime": "^7.21.0",
     "@emotion/react": "^11.10.6",
